<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/account_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="15dp"
            android:background="@color/light_grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"
                android:orientation="vertical">

               <LinearLayout
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <View
                       android:layout_width="0dp"
                       android:layout_height="0dp"
                       android:layout_weight="1"/>

                   <de.hdodenhof.circleimageview.CircleImageView
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:id="@+id/profileImage"
                       android:layout_marginBottom="20sp"
                       android:background="@drawable/profile_foreground"
                       android:src="@drawable/profile_foreground"/>

                   <View
                       android:layout_width="0dp"
                       android:layout_height="0dp"
                       android:layout_weight="1"/>

               </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/white_rounded_corner"
                            android:id="@+id/Name"
                            android:inputType="text"
                            android:hint="@string/name"
                            android:autofillHints="name"
                            android:textColor="@color/text_color"
                            android:padding="5dp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/age"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="0dp"
                            android:hint="@string/Select_Age"
                            android:background="@drawable/white_rounded_corner"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                            <AutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/dropdown_age"
                                android:textColor="@color/text_color"
                                android:background="@drawable/white_rounded_corner"
                                android:inputType="none"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:hint="@string/Select_Gender"
                        android:background="@drawable/white_rounded_corner"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:id="@+id/dropdown_gender"
                            android:textColor="@color/text_color"
                            android:background="@drawable/white_rounded_corner"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/interested"
                    android:textSize="16sp"/>



                    <RadioGroup
                        android:id="@+id/genderOptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">
                        <RadioButton
                            android:id="@+id/maleOption"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:background="@drawable/radiogroup_backround"
                            />
                        <RadioButton
                            android:id="@+id/femaleOption"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/radiogroup_backround"
                            android:text="@string/female" />
                    </RadioGroup>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/gallery"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:gravity="center"/>

                <ImageButton
                    android:id="@+id/edit_gallery"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/edit_gallery"
                    android:background="@drawable/edit_gallery" />

            </LinearLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/done"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/account_done"
                    android:text="@string/done"
                    android:textStyle="bold"
                    android:textColor="@color/white">

                </androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>